upgrade:: split router up image user
