# be/internal/router/user/user.router.go
@@ -34,6 +34,7 @@ func (ur *UserRouter) InitUserRouter(Router *gin.RouterGroup) {
 		userRouterPrivate.GET("/find_user", userInfoController.User.FindUser)
 		userRouterPrivate.GET("/get_list_friend", userInfoController.User.GetListUserFriend)
 		userRouterPrivate.PUT("/update_user_info", userInfoController.User.UpdateUserInfo)
+		userRouterPrivate.PUT("/update_user_avatar", userInfoController.User.UpdateUserAvatar)
 		userRouterPrivate.POST("/create_friend_request", userInfoController.User.CreateFriendRequest)
 		userRouterPrivate.DELETE("/end_friend_request", userInfoController.User.EndFriendRequest)
 		userRouterPrivate.DELETE("/delete_friend", userInfoController.User.DeleteFriend)
